# dco3

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
dco3_derive/: Cargo.toml  README.md
dco3_derive/src/: lib.rs
src/: constants.rs  lib.rs  models.rs
src/auth/: errors.rs  mod.rs  models.rs
src/auth/tests/: auth_ok_placeholder.json
src/client/: errors.rs  mod.rs  models.rs
src/config/: mod.rs  models.rs
src/eventlog/: mod.rs  models.rs
src/groups/: groups.rs  mod.rs  models.rs
src/nodes/: download.rs  folders.rs  mod.rs  nodes.rs  upload.rs
src/nodes/models/: crypto.rs  filters.rs  mod.rs  sorts.rs
src/nodes/rooms/: mod.rs  models.rs
src/provisioning/: mod.rs  models.rs
src/public/: download.rs  mod.rs  models.rs  upload.rs
src/roles/: mod.rs  models.rs  roles.rs
src/settings/: keypair.rs  mod.rs  models.rs
src/shares/: download.rs  mod.rs  upload.rs
src/shares/models/: download.rs  mod.rs  upload.rs
src/system/: mod.rs
src/system/auth/: mod.rs  models.rs
src/tests/: groups.rs  mcp.rs  mod.rs  nodes.rs  provisioning.rs  roles.rs  rooms.rs  shares.rs  user.rs  users.rs
src/tests/responses/: customer_info_ok.json
src/tests/responses/download/: download_url_ok_template.json
src/tests/responses/eventlog/: audit_node_list_ok.json  event_operations_ok.json  events_ok.json
src/tests/responses/nodes/: node_encrypted_ok.json  node_ok.json  nodes_ok.json  room_policies_ok.json
src/tests/responses/provisioning/: customer_ok.json  customers_ok.json  update_customer_ok.json
src/tests/responses/public/: download_share_ok.json  download_share_ok_templated.json  system_info_ok.json  upload_share_ok.json  version_ok.json
src/tests/responses/roles/: role_group_list_ok.json  role_user_list_ok.json  roles_ok.json
src/tests/responses/users/: user_ok.json  users_ok.json
src/user/: account.rs  keypairs.rs  mod.rs  models.rs
src/users/: mod.rs  models.rs  users.rs
src/utils/: mod.rs
