[package]
name = "dco3"
version = "0.6.0"
edition = "2021"
authors = ["Octavio Simone"]
repository = "https://github.com/unbekanntes-pferd/dco3"
homepage = "https://github.com/unbekanntes-pferd/dco3"
license = "MIT"
readme = "README.md"
keywords = ["dracoon", "api-client", "rust-sdk"]
description = "Async API wrapper for DRACOON in Rust."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
# HTTP client
reqwest = {version = "0.11.22", features = ["json", "stream"]}
reqwest-middleware = "0.2.3"
reqwest-retry = "0.3.0"

# crypto 
dco3_crypto = "0.5.1"

# async runtime and utils
tokio = { version = "1.33.0", features = ["full"] }
tokio-util = { version = "0.7.9", features = ["full"] }
async-trait = "0.1.74"
async-stream = "0.3.5"
futures-util = "0.3.28"
bytes = "1.5.0"

# parsing
serde = { version = "1.0.189", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_json = "1.0.107"

# error handling
thiserror = "1.0.49"
retry-policies = "0.2.1"

# logging and tracing
tracing = "0.1.39"

# utils
url = "2.4.1"
base64 = "0.21.4"
chrono = "0.4.31"
dco3_derive = { path = "dco3_derive", version = "0.1.0"}


[dev-dependencies]
mockito = "1.2.0"

