[package]
name = "dco3"
version = "0.7.0"
edition = "2021"
authors = ["Octavio Simone"]
repository = "https://github.com/unbekanntes-pferd/dco3"
homepage = "https://github.com/unbekanntes-pferd/dco3"
license = "MIT"
readme = "README.md"
keywords = ["dracoon", "api-client", "rust-sdk"]
description = "Async API wrapper for DRACOON in Rust."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
# HTTP client (currently pinned at 0.11.27 due to reqwest-retry and reqwest-middleware)
reqwest = {version = "0.11.27", features = ["json", "stream"]}
reqwest-middleware = "0.2.5"
reqwest-retry = "0.4.0"

# crypto 
dco3_crypto = "0.6.0"

# async runtime and utils
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["full"] }
async-trait = "0.1.78"
async-stream = "0.3.5"
futures-util = "0.3.30"
bytes = "1.5.0"

# parsing
serde = { version = "1", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_json = "1"

# error handling
thiserror = "1"
retry-policies = "0.3.0"

# logging and tracing
tracing = "0.1.40"

# utils
url = "2.5.0"
base64 = "0.22.0"
chrono = "0.4.35"
dco3_derive = { path = "dco3_derive", version = "0.1.0"}


[dev-dependencies]
mockito = "1.4.0"

