[package]
name = "dco3"
version = "0.14.2"
edition = "2021"
authors = ["Octavio Simone"]
repository = "https://github.com/unbekanntes-pferd/dco3"
homepage = "https://github.com/unbekanntes-pferd/dco3"
license = "MIT"
readme = "README.md"
keywords = ["dracoon", "api-client", "rust-sdk"]
description = "Async API wrapper for DRACOON in Rust."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
reqwest = {version = "0.12", features = ["json", "stream"]}
reqwest-middleware = {version = "0.3", features = ["json"]}
reqwest-retry = "0.6.0"

# crypto 
dco3_crypto = "0.7"

# async runtime and utils
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
async-trait = "0.1"
async-stream = "0.3"
futures-util = "0.3"
bytes = "1.6"

# parsing
serde = { version = "1", features = ["derive"] }
serde-xml-rs = "0.6"
serde_json = "1"

# error handling
thiserror = "1"
retry-policies = "0.4.0"

# logging and tracing
tracing = "0.1"

# utils
url = "2"
base64 = "0.22"
chrono = {version = "0.4", features = ["serde"]}
dco3_derive = { path = "dco3_derive", version = "0.1.0"}


[dev-dependencies]
mockito = "1.4.0"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}

