[package]
name = "dco3_derive"
version = "0.2.0"
edition = "2021"
authors = ["Octavio Simone"]
repository = "https://github.com/unbekanntes-pferd/dco3/dco3_derive"
homepage = "https://github.com/unbekanntes-pferd/dco3/dco3_derive"
license = "MIT"
readme = "README.md"
keywords = ["derive", "macro", "rust-sdk", "dracoon"]
description = "Derive macro for DRACOON API models parsed from a response."

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "2"
quote = "1"